--- a/package.json
+++ b/package.json
@@ -1,20 +1,82 @@
 {
   "name": "vue3-cockpit",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build --force",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "@turf/turf": "^7.0.0",
+    "@videojs-player/vue": "^1.0.0",
+    "@vueuse/core": "^10.11.0",
+    "@vueuse/head": "^2.0.0",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^1.0.2",
+    "ahooks-vue": "^0.15.1",
+    "animate.css": "^4.1.1",
+    "ant-design-vue": "^4.2.3",
+    "axios": "^1.7.2",
+    "classnames": "^2.5.1",
+    "countup.js": "^2.8.0",
+    "dayjs": "^1.11.11",
+    "echarts": "^5.5.1",
+    "font-awesome": "^4.7.0",
+    "jsencrypt": "^3.3.2",
+    "jshashes": "^1.0.8",
+    "lodash": "^4.17.21",
+    "mapbox-gl": "^3.5.1",
+    "mathjs": "^13.0.2",
+    "minireset.css": "^0.0.7",
+    "mitt": "^3.0.1",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "qs": "^6.12.2",
+    "swiper": "^11.1.4",
+    "three": "^0.166.1",
+    "unplugin-vue-setup-extend-plus": "^1.0.1",
+    "video.js": "^8.12.0",
+    "vue": "^3.4.29",
+    "vue-countup-v2": "^4.0.0",
+    "vue-echarts": "^6.7.3",
+    "vue-json-pretty": "^2.4.0",
+    "vue-pdf": "^4.3.0",
+    "vue-router": "^4.3.3",
+    "vue3-colorpicker": "^2.3.0",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@rushstack/eslint-patch": "^1.8.0",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
-    "typescript": "^5.2.2",
+    "@vitejs/plugin-vue-jsx": "^4.0.0",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.23.0",
+    "fs": "^0.0.1-security",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
+    "npm-run-all2": "^6.2.0",
+    "postcss": "^8.4.39",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.4",
+    "typescript": "~5.4.0",
     "vite": "^5.3.1",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-mock": "^3.0.2",
+    "vite-plugin-vue-devtools": "^7.3.1",
     "vue-tsc": "^2.0.21"
   }
 }
