--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,7 +4,7 @@
   "tabWidth": 2,
   "printWidth": 120,
   "singleQuote": true,
-  "insertPragma": false,
+  "insertPragma": true,
   "trailingComma": "all",
   "jsxSingleQuote": true,
   "bracketSpacing": true,
