--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@faker-js/faker": "^8.4.1",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
