--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "vue": "^3.4.29",
     "vue-countup-v2": "^4.0.0",
     "vue-echarts": "^6.7.3",
+    "vue-final-modal": "^4.5.4",
     "vue-json-pretty": "^2.4.0",
     "vue-pdf": "^4.3.0",
     "vue-router": "^4.3.3",
