--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/lodash": "^4.17.6",
     "@types/node": "^20.14.5",
+    "@types/nprogress": "^0.2.3",
+    "@types/qs": "^6.9.15",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "@vue/eslint-config-prettier": "^9.0.0",
