--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "countup.js": "^2.8.0",
     "dayjs": "^1.11.11",
     "echarts": "^5.5.1",
+    "echarts-gl": "^2.0.9",
     "echarts-liquidfill": "^3.1.0",
     "font-awesome": "^4.7.0",
     "jsencrypt": "^3.3.2",
