--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "video.js": "^8.12.0",
     "vue": "^3.4.29",
     "vue-countup-v2": "^4.0.0",
+    "vue-countup-v3": "^1.4.2",
     "vue-echarts": "^6.7.3",
     "vue-final-modal": "^4.5.4",
     "vue-json-pretty": "^2.4.0",
